<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="parse_app_id">DRLaMM4N2PrAOXjjbdXbOv4Fp9Gt2zv2OWZ5TpRM</string>
    <string name="parse_client_key">beiIlODhajVYeKFD48pyMAmnkcggXigbCODGgKO7</string>
    <string name="parse_master_key">v9T3CG157tc8rKUu99SJmTZRFMvkKrIkqbfWMTDR</string>
    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="signup_button_label">Sign Up!</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="enter_email_text">Enter your email to recover your\n\t\t\t\t\tpassword</string>
    <string name="submit_button_label">SUBMIT</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_openeing_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some frinds first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="menu_chat_label">Send Text</string>
    <string name="title_activity_send_text">SendTextActivity</string>
    <string name="send_text_hint">Enter the text to send</string>
    <string name="choose_recipient_button_label">Choose recipient</string>
    <string name="send_text_error_message">Please make sure you enter a text message!</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="content_desc_background">Ribbit frog background image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
        <string name="push_message">You have a new Ribbit message from %s!</string>

</resources>