<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.treehouselearning.ribbit.MainActivity" >

    <item
        android:id="@+id/action_edit_friends"
        android:title="@string/menu_edit_friends_label">
    </item>
    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/menu_logout_label">
    </item>
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_menu_camera"
        android:showAsAction="always"
        android:title="@string/menu_camera_label">
    </item>
    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_action_chat"
        android:showAsAction="always"
        android:title="@string/menu_chat_label">
    </item>

</menu>