<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.treehouselearning.ribbit.ui.SignUpActivity" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/auth_common" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer" >

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText" 
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText" 
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailField"
			style="@style/AuthEditText" 
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>
		
    <Button
        android:id="@+id/signupButton"
        style="@style/AuthButton"
        android:text="@string/sign_up_button_label"        
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@+id/buttonDivider"
        android:layout_toStartOf="@+id/buttonDivider"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp" />
    
    <Button
        android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:text="@string/cancel_button_label"        
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@+id/buttonDivider"
        android:layout_toEndOf="@+id/buttonDivider"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>